syntax = "proto3";

package mercari.go_conference_2021_spring_office_hour.gateway;

option go_package = "github.com/mercari/go-conference-2021-spring-office-hour/services/gateway/proto";

import "google/api/annotations.proto";
import "services/authority/proto/authority.proto";
import "services/catalog/proto/catalog.proto";
import "services/category/proto/category.proto";

service GatewayService {
  rpc Signup(authority.SignupRequest) returns (authority.SignupResponse){
    option (google.api.http) = {
      post: "/auth/signup"
      body: "*"
    };
  }

  rpc Signin(authority.SigninRequest) returns (authority.SigninResponse){
    option (google.api.http) = {
      post: "/auth/signin"
      body: "*"
    };
  }

  rpc CreateItem(catalog.CreateItemRequest) returns (catalog.CreateItemResponse){
    option (google.api.http) = {
      post: "/catalog/items"
      body: "*"
    };
  }

  rpc GetItem(catalog.GetItemRequest) returns (catalog.GetItemResponse){
    option (google.api.http) = {
      get: "/catalog/items/{id}"
    };
  }

  rpc ListItems(catalog.ListItemsRequest) returns (catalog.ListItemsResponse){
    option (google.api.http) = {
      get: "/catalog/items"
    };
  }

  rpc ListCategories(category.ListCategoriesRequest) returns (category.ListCategoriesResponse){
    option (google.api.http) = {
      get: "/categories"
    };
  }
}

message SigninRequest {
  string name = 1;
}

message SigninResponse {
  string access_token = 1;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  string access_token = 1;
}
